--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -22,41 +22,55 @@
     min-height: 100px;
     padding: 30px;
     padding-top: 42px;
+    padding-bottom: 0;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    margin-bottom: 62px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 110px;
+    padding-bottom: 0;
     padding-top: 53px;
   }
 }
 
+.main-container__functional-food {
+  margin: 0 auto;
+}
+
 .main-header__logo {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    min-width: 174px;
-    height: 52px;
   }
 
   @media (min-width: @desktop-width) {
-    min-width: 202px;
-    height: 59px;
   }
 }
 
 .main-header__logo-image {
   width: 33px;
   height: 38px;
-  margin-right: 57px;
 
   &:hover {
     fill: @color-basic-green-2;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-right: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 10px;
   }
 }
 
 .main-header__company-image {
   width: 101px;
   height: 18px;
+}
+
+.main-header__navigation {
+  margin-left: auto;
 }
