--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "common/fonts.less";
 @import "common/variables.less";
 @import "common/visually-hidden.less";
+@import "common/global.less";
 
 /* index.html */
 @import "blocks/page.less";
