--- a/source/less/blocks/catalog-edditional.less
+++ b/source/less/blocks/catalog-edditional.less
@@ -11,11 +11,14 @@
   @media (min-width: @desktop-width) {
     padding: 110px;
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 
 .catalog-edditional__wrapper {
-  min-width: 282px;
+  width: 282px;
+  margin: 0 auto;
+  margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
     min-width: 708px;
@@ -23,6 +26,7 @@
 
   @media (min-width: @desktop-width) {
     min-width: 896px;
+    margin: 0;
   }
 }
 
@@ -32,4 +36,24 @@
   font-size: 24px;
   line-height: 24px;
   color: @color-black-2;
+  margin: 0;
+  padding-bottom: 36px;
+  border-bottom: 1px solid @color-special-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 0;
+    border-bottom: none;
+    margin-bottom: 80px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+.catalog-edditional__present {
+  align-self: flex-end;
 }
