--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -1,20 +1,17 @@
 .cooperation {
   background-color: @color-basic-grey;
 
-  width: 320px;
   margin: 0 auto;
   min-height: 112px;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    width: 100%;
     min-height: 199px;
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
-    padding: 56px 80px;
-    min-width: 565px;
     min-height: 198px;
+    width: 100%;
   }
 }
 
