--- a/source/less/blocks/form-checkbox.less
+++ b/source/less/blocks/form-checkbox.less
@@ -1,9 +1,27 @@
+.form-checkbox {
+  border: none;
+}
+
 .form-checkbox__title {
   font-family: @font-oswald;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
   color: @color-black;
+  padding: 0;
+  margin-bottom: 34px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 57px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 57px;
+  }
 }
 
 .form-checkbox__list {
@@ -12,13 +30,36 @@
   margin: 0;
   display: grid;
   grid-template-columns: 280px;
+  margin-bottom: 34px;
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 221px 221px;
+    gap: 32px 123px;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 221px 221px 221px 221px;
+    gap: 32px 104px;
+    margin-bottom: 61px;
+  }
+}
+
+.form-checkbox__item {
+  &:not(:last-child) {
+    margin-bottom: 12px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -29,4 +70,14 @@
   line-height: 18px;
   text-transform: uppercase;
   color: @color-black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
