--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -1,12 +1,47 @@
+.form-contacts {
+  border: none;
+}
+
 .form-contacts__title {
   font-family: @font-oswald;
+  background-color: @color-white;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
   color: @color-black;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 35px;
+  position: relative;
+  z-index: 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: -2;
+    top: 15px;
+    left: 0;
+    background-color: @color-basic-green;
+    width: 280px;
+    height: 2px;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 76px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 76px;
+  }
 }
 
 .form-contacts__list {
+  padding: 0;
+  margin: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -17,6 +52,29 @@
 
   @media (min-width: @desktop-width) {
     flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.form-contacts__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &:not(:last-child) {
+    margin-bottom: 14px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -27,6 +85,30 @@
   line-height: 18px;
   color: @color-dark-grey;
   text-transform: uppercase;
+  margin: 0;
+  margin-right: 11px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.form-contacts__parameter--email {
+  min-width: 50px;
+
+  @media (min-width: @tablet-width) {
+    min-width: 63px;
+  }
+
+  @media (min-width: @desktop-width) {
+  }
 }
 
 .form-contacts__input {
@@ -36,4 +118,55 @@
   line-height: 18px;
   color: @color-dark-grey;
   text-transform: uppercase;
+  width: 100%;
+  padding: 12px 35px 14px 15px;
+  border: 1px solid @color-special-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 10px 45px 10px 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 10px 45px 10px 21px;
+  }
+
+  &:hover {
+    border: 1px solid @color-special-grey;
+  }
+
+  &:focus {
+    border: 1px solid @color-dark-grey;
+  }
+
+  &:invalid {
+    border: 1px solid #FF8282;
+  }
+}
+
+.form-contacts__input--email {
+  width: 219px;
+
+  @media (min-width: @tablet-width) {
+    width: 551px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 486px;
+  }
+}
+
+.form-contacts__input--phone {
+  width: 204px;
+
+  @media (min-width: @tablet-width) {
+    width: 535px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 472px;
+  }
 }
