--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -4,15 +4,34 @@
   color: @color-white;
   font-family: @font-oswald;
 
-  box-sizing: border-box;
   padding: 20px;
   padding-top: 27px;
+  width: 320px;
+  position: relative;
+  z-index: 2;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 320px;
+    height: 302px;
+    left: 0;
+    top: 0;
+    background-color: fade(@color-basic-green, 85%);
+    z-index: -1;
+  }
 
   @media (min-width: @tablet-width) {
-    min-width: 709px;
+    min-width: 534px;
     min-height: 810px;
 
     background-image: none;
+    padding: 0;
+
+    &::before {
+      width: 0;
+      height: 0;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -20,13 +39,62 @@
     background-repeat: no-repeat;
     min-width: 920px;
     min-height: 499px;
+    padding: 0;
   }
+
+  @media (min-width: @desktop-width) {
+    background-image: none;
+
+    &::after {
+      content: url("../img/index-cat-background.jpg");
+      position: absolute;
+      left: 660px;
+      top: -179px;
+      min-width: 920px;
+      min-height: 499px;
+      z-index: -1;
+    }
+
+    &::before {
+      content: "";
+      width: 720px;
+      height: 694px;
+      position: absolute;
+      left: 486px;
+      top: -206px;
+      background-color: fade(@color-basic-green, 85%);
+      z-index: 3;
+    }
+  }
+}
+
+.functional-food__wrapper {
+  margin: 0 auto;
 }
 
 .functional-food__title {
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
+  margin: 0;
+  margin-bottom: 25px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: @color-black;
+    margin-bottom: 41px;
+    width: 416px;
+    text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: @color-black;
+    margin-bottom: 40px;
+  }
 }
 
 .functional-food__slogan {
@@ -34,6 +102,24 @@
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 302px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: @color-black;
+    margin-bottom: 49px;
+    text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+    color: @color-black;
+    margin-bottom: 52px;
+  }
 }
 
 .functional-food__button {
@@ -43,4 +129,37 @@
   text-decoration: none;
   color: @color-white;
   text-transform: uppercase;
+  padding: 7px;
+  text-align: center;
+  width: 280px;
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 14px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 14px;
+  }
+}
+
+.functional-food__feed-image {
+  position: absolute;
+  left: 23px;
+  top: 165px;
+  z-index: 9;
+
+  @media (min-width: @tablet-width) {
+    left: 183px;
+    top: 330px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 404px;
+    top: -46px;
+  }
 }
