--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,5 +1,5 @@
 .html-academy {
-  width: 320px;
+  width: 100%;
   min-height: 34px;
   margin: 0 auto;
   padding: 22px;
@@ -34,7 +34,7 @@
 }
 
 .html-academy__icon {
-  fill: @color-special-grey-2;
+  fill: @color-dark-grey-1;
 
   &:hover {
     fill: @color-basic-green;
