--- a/source/less/blocks/parametrs.less
+++ b/source/less/blocks/parametrs.less
@@ -7,6 +7,7 @@
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: column;
+    width: 586px;
   }
 }
 
@@ -15,15 +16,29 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 55px;
+    width: 366px;
+  }
 }
 
 .parametrs__item {
   width: 124px;
-  min-height: 70px;
   position: relative;
 
   &:not(:last-child) {
     margin-right: 32px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 162px;
+    min-height: 77px;
   }
 }
 
@@ -75,6 +90,8 @@
   @media (min-width: @desktop-width) {
     font-size: 14px;
     line-height: 14px;
-    background-color: @color-white;
+    background-color: @color-light-grey;
+    left: 9px;
+    width: 142px;
   }
 }
