--- a/source/less/blocks/product-editional.less
+++ b/source/less/blocks/product-editional.less
@@ -1,3 +1,28 @@
+.product-editional {
+  padding-top: 13px;
+  padding-bottom: 19px;
+  display: grid;
+  grid-template-areas: "product"
+  "detail"
+  "button";
+
+  @media (min-width: @tablet-width) {
+    grid-template-areas: "product detail"
+    "button button";
+    padding: 26px 38px 28px 38px;
+    grid-template-columns: 266px 300px;
+    column-gap: 60px;
+    row-gap: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 15px 0 17px 0;
+    grid-template-columns: 286px 288px 244px;
+    column-gap: 38px;
+    grid-template-areas: "product detail button";
+  }
+}
+
 .product-editional__name {
   font-family: @font-oswald;
   font-weight: 400;
@@ -5,6 +30,36 @@
   line-height: 16px;
   color: @color-black-2;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 13px;
+  grid-area: product;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.product-editional__detail {
+  margin: 0;
+  margin-bottom: 15px;
+  width: 282px;
+  display: flex;
+  justify-content: space-between;
+  grid-area: detail;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+  }
 }
 
 .product-editional__volume {
@@ -13,6 +68,16 @@
   font-size: 14px;
   line-height: 14px;
   color: @color-dark-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .product-editional__cost {
@@ -22,6 +87,17 @@
   line-height: 14px;
   color: @color-dark-grey;
   text-transform: uppercase;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .product-editional__order {
@@ -32,4 +108,14 @@
   color: @color-white;
   text-transform: uppercase;
   text-decoration: none;
+  text-align: center;
+  padding: 10px;
+  grid-area: button;
+
+  @media (min-width: @tablet-width) {
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 244px;
+  }
 }
