--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -17,6 +17,7 @@
   text-align: center;
   min-height: 66px;
   position: relative;
+  z-index: 10;
 
   @media (max-width: @mobile-width-only) {
     &::after {
@@ -28,6 +29,16 @@
       width: 100%;
       height: 2px;
     }
+  }
+
+  @media (min-width: @tablet-width) {
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 10px;
   }
 }
 
@@ -42,8 +53,36 @@
   &:active {
     opacity: 0.3;
   }
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    line-height: 24px;
+    color: @color-black;
+    padding-bottom: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
+    padding-bottom: 10px;
+    color: @color-black;
+  }
+}
+
+.site-list__link--index {
+
+  @media (min-width: @desktop-width) {
+    color: @color-white;
+  }
 }
 
 .site-list__link--current {
-  border-bottom: 2px @color-basic-green solid;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: 2px @color-basic-green solid;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-bottom: 2px @color-white solid;
+  }
 }
