Адаптивные декоративные элементы

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -38,7 +38,7 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     grid-template-columns: 436px 560px;
-    gap: 0px 224px;
+    gap: 0 224px;
     grid-template-areas: "description range"
       "parametrs range";
     background: linear-gradient(to bottom, @color-white 22%, @color-light-grey 22%, @color-light-grey 44%, @color-light-grey 44%);
@@ -130,7 +130,6 @@
   line-height: 20px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0;
   width: 188px;
   margin: 0 auto;
 
