--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -108,6 +108,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    /*...*/
   }
 }
 
@@ -143,7 +144,7 @@
   }
 
   &:invalid {
-    border: 1px solid #FF8282;
+    border: 1px solid @color-error;
   }
 }
 
