--- a/source/less/blocks/form-info.less
+++ b/source/less/blocks/form-info.less
@@ -7,7 +7,7 @@
   }
 
   @media (min-width: @desktop-width) {
-
+    /*...*/
   }
 }
 
@@ -22,7 +22,7 @@
   }
 
   @media (min-width: @desktop-width) {
-
+    /*...*/
   }
 }
 
@@ -42,7 +42,7 @@
   }
 
   @media (min-width: @desktop-width) {
-
+    /*...*/
   }
 }
 
@@ -89,7 +89,6 @@
   @media (min-width: @desktop-width) {
     min-width: 116px;
   }
-
 }
 
 .form-info__input {
@@ -133,6 +132,6 @@
   }
 
   &:invalid {
-    border: 1px solid #FF8282;
+    border: 1px solid @color-error;
   }
 }
