--- a/source/less/blocks/product-editional.less
+++ b/source/less/blocks/product-editional.less
@@ -3,12 +3,12 @@
   padding-bottom: 19px;
   display: grid;
   grid-template-areas: "product"
-  "detail"
-  "button";
+    "detail"
+    "button";
 
   @media (min-width: @tablet-width) {
     grid-template-areas: "product detail"
-    "button button";
+      "button button";
     padding: 26px 38px 28px 38px;
     grid-template-columns: 266px 300px;
     column-gap: 60px;
@@ -59,6 +59,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    /*...*/
   }
 }
 
@@ -113,6 +114,7 @@
   grid-area: button;
 
   @media (min-width: @tablet-width) {
+    /*...*/
   }
 
   @media (min-width: @desktop-width) {
