--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -21,8 +21,8 @@
   display: grid;
   grid-template-columns: 140px 141px;
   grid-template-areas: "image name"
-  "image detail"
-  "button button";
+    "image detail"
+    "button button";
   row-gap: 20px;
 
   @media (min-width: @tablet-width) {
@@ -43,12 +43,6 @@
 
 .product__more {
   display: block;
-
-  @media (min-width: @tablet-width) {
-  }
-
-  @media (min-width: @desktop-width) {
-  }
 }
 
 .product__wrapper-show-more {
@@ -124,7 +118,6 @@
       background-color: @color-special-grey-2;
     }
   }
-
 }
 
 .product__picture {
@@ -195,6 +188,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    /*...*/
   }
 }
 
