--- a/source/less/blocks/edditional-list.less
+++ b/source/less/blocks/edditional-list.less
@@ -1,19 +1,15 @@
 .edditional-list {
   list-style: none;
-
-  margin: 0;
   padding: 0;
 
   @media (min-width: @tablet-width) {
     border: 1px solid @color-special-grey;
+    margin-top: 0;
   }
 
   @media (min-width: @desktop-width) {
     border: none;
     border-top: 1px solid @color-special-grey;
+    margin: 0;
   }
-}
-
-.edditional-list__item {
-  border-bottom: 1px solid @color-special-grey;
 }
