--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -9,6 +9,7 @@
 }
 
 .main-container__functional-food {
+  margin: 0 auto;
   margin-bottom: 20px;
 }
 
@@ -42,4 +43,12 @@
 
 .main-container__catalog-edditional {
   margin-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 76px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 86px;
+  }
 }
