--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -102,12 +102,16 @@
   background-color: @color-white;
   min-width: 440px;
   min-height: 36px;
+  width: 100%;
 
   @media (max-width: @mobile-width-only) {
-    padding-top: 20px;
     position: absolute;
     top: 65px;
     left: 0;
     z-index: 5;
   }
+}
+
+.navigation__list {
+  padding-top: 0;
 }
