--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -43,6 +43,7 @@
     min-height: 289px;
     padding: 0 43px 42px 41px;
     background-repeat: no-repeat;
+    margin: 0;
 
     &::before {
       position: absolute;
