--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,6 +1,4 @@
 .product {
-  margin: 0;
-  width: 282px;
   padding-top: 11px;
 
   @media (min-width: @tablet-width) {
@@ -17,6 +15,7 @@
 }
 
 .product__wrapper {
+  margin: 0 auto;
   width: 280px;
   display: grid;
   grid-template-columns: 140px 141px;
