--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,6 +27,7 @@
 @import "blocks/html-academy.less";
 
 /* catalog.html */
+@import "blocks/line.less";
 @import "blocks/catalog.less";
 @import "blocks/product-list.less";
 @import "blocks/product.less";
