--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,19 +1,15 @@
 .catalog {
   background-color: @color-white;
 
-  padding: 20px;
-  padding-right: 20px;
   padding-top: 27px;
 
   @media (min-width: @tablet-width) {
-    padding: 30px;
     padding-top: 27px;
     padding-bottom: 0;
     margin-bottom: 68px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 110px;
     padding-top: 27px;
     padding-bottom: 0;
     margin-bottom: 75px;
@@ -21,15 +17,16 @@
 }
 
 .catalog__wrapper {
-  width: 282px;
-  margin: 0 auto;
+  /*width: 282px;
+  margin: 0 auto;*/
 
   @media (min-width: @tablet-width) {
-    min-width: 708px;
+    width: 708px;
+    margin: 0 auto;
   }
 
   @media (min-width: @desktop-width) {
-    min-width: 1220px;
+    width: 1220px;
   }
 }
 
@@ -39,16 +36,17 @@
   font-size: 36px;
   line-height: 36px;
   padding-bottom: 41px;
-  margin: 0;
-  border-bottom: 1px solid @color-light-grey-1;
+  margin: 0 auto;
   margin-bottom: 8px;
+  width: 280px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
     padding-bottom: 0;
     border-bottom: none;
-    margin-bottom: 82px;
+    width: 431px;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -57,6 +55,7 @@
     padding-bottom: 0;
     border-bottom: none;
     margin-bottom: 84px;
+    width: 431px;
   }
 }
 
