--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -4,7 +4,6 @@
 
 .form-contacts__title {
   font-family: @font-oswald;
-  background-color: @color-white;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
@@ -13,16 +12,18 @@
   margin: 0;
   margin-bottom: 35px;
   position: relative;
+  background-color: @color-white;
   z-index: 0;
+  display: inline-block;
 
   &::before {
     content: "";
     position: absolute;
-    z-index: -2;
+    z-index: -1;
     top: 15px;
     left: 0;
     background-color: @color-basic-green;
-    width: 280px;
+    width: 1000%;
     height: 2px;
   }
 
@@ -30,12 +31,20 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+
+    &::before {
+      left: -200%;
+    }
   }
 
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+
+    &::before {
+      left: -200%;
+    }
   }
 }
 
