--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,4 +1,8 @@
 .main-header {
+  /* ... */
+}
+
+.main-header__wrapper {
   background-color: @color-white;
   font-family: @font-oswald;
   font-weight: 500;
@@ -8,23 +12,23 @@
 
   box-sizing: border-box;
   min-height: 64px;
-  padding: 20px;
-  padding-top: 10px;
-  padding-bottom: 17px;
-  margin: 0;
+  padding: 11px 20px 17px 20px;
 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     min-height: 100px;
     padding: 30px;
-    padding-top: 42px;
     padding-bottom: 0;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
     margin-bottom: 62px;
   }
 
@@ -35,8 +39,24 @@
   }
 }
 
-.main-container__functional-food {
-  margin: 0 auto;
+.main-header__wrapper-nojs {
+  display: block;
+  padding: 0;
+}
+
+.main-header__wrapper-logo {
+  padding: 11px 20px 17px 20px;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+  }
 }
 
 .main-header__logo {
@@ -60,11 +80,11 @@
   }
 }
 
+.main-header__name-logo {
+  padding-top: 10px;
+}
+
 .main-header__company-image {
   width: 101px;
   height: 18px;
-}
-
-.main-header__navigation {
-  margin-left: auto;
 }
