--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,6 +1,6 @@
 .site-list {
   margin: 0;
-  padding: 0;
+  padding-left: 0;
 
   @media (min-width: @tablet-width) {
     display: flex;
@@ -18,17 +18,11 @@
   min-height: 66px;
   position: relative;
   z-index: 10;
+  padding-top: 22px;
+  padding-bottom: 22px;
 
   @media (max-width: @mobile-width-only) {
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: -22px;
-      background-color: @color-light-grey-2;
-      width: 100%;
-      height: 2px;
-    }
+    border-top: 2px solid @color-light-grey-2;
   }
 
   @media (min-width: @tablet-width) {
@@ -76,6 +70,16 @@
 }
 
 .site-list__link--current {
+  @media (min-width: @tablet-width) {
+    border-bottom: 2px @color-basic-green solid;
+  }
+
+  @media (min-width: @desktop-width) {
+    border-bottom: 2px @color-basic-green solid;
+  }
+}
+
+.site-list__link--current-index {
   @media (min-width: @tablet-width) {
     border-bottom: 2px @color-basic-green solid;
   }
