--- a/5/css/style.css
+++ b/5/css/style.css
@@ -61,6 +61,9 @@
   margin: 0;
 }
 .main-header {
+  /* ... */
+}
+.main-header__wrapper {
   background-color: #ffffff;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 500;
@@ -69,35 +72,51 @@
   color: #000000;
   box-sizing: border-box;
   min-height: 64px;
-  padding: 20px;
-  padding-top: 10px;
-  padding-bottom: 17px;
-  margin: 0;
+  padding: 11px 20px 17px 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  margin: 0 auto;
 }
 @media (min-width: 768px) {
-  .main-header {
+  .main-header__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     min-height: 100px;
     padding: 30px;
-    padding-top: 42px;
     padding-bottom: 0;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
     margin-bottom: 62px;
   }
 }
 @media (min-width: 1440px) {
-  .main-header {
+  .main-header__wrapper {
     padding: 110px;
     padding-bottom: 0;
     padding-top: 53px;
   }
 }
-.main-container__functional-food {
-  margin: 0 auto;
+.main-header__wrapper-nojs {
+  display: block;
+  padding: 0;
+}
+.main-header__wrapper-logo {
+  padding: 11px 20px 17px 20px;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .main-header__wrapper-logo {
+    width: auto;
+  }
+}
+@media (min-width: 1440px) {
+  .main-header__wrapper-logo {
+    width: auto;
+  }
 }
 .main-header__logo {
   align-items: center;
@@ -119,12 +138,12 @@
     margin-right: 10px;
   }
 }
+.main-header__name-logo {
+  padding-top: 10px;
+}
 .main-header__company-image {
   width: 101px;
   height: 18px;
-}
-.main-header__navigation {
-  margin-left: auto;
 }
 /* Логотип компании */
 /* Навигация */
@@ -221,19 +240,22 @@
   background-color: #ffffff;
   min-width: 440px;
   min-height: 36px;
+  width: 100%;
 }
 @media (max-width: 768px) {
   .navigation__wrapper {
-    padding-top: 20px;
     position: absolute;
     top: 65px;
     left: 0;
     z-index: 5;
   }
 }
+.navigation__list {
+  padding-top: 0;
+}
 .site-list {
   margin: 0;
-  padding: 0;
+  padding-left: 0;
 }
 @media (min-width: 768px) {
   .site-list {
@@ -251,16 +273,12 @@
   min-height: 66px;
   position: relative;
   z-index: 10;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 @media (max-width: 768px) {
-  .site-list__item::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: -22px;
-    background-color: #E6E6E6;
-    width: 100%;
-    height: 2px;
+  .site-list__item {
+    border-top: 2px solid #E6E6E6;
   }
 }
 @media (min-width: 768px) {
@@ -311,6 +329,16 @@
 }
 @media (min-width: 1440px) {
   .site-list__link--current {
+    border-bottom: 2px #68B738 solid;
+  }
+}
+@media (min-width: 768px) {
+  .site-list__link--current-index {
+    border-bottom: 2px #68B738 solid;
+  }
+}
+@media (min-width: 1440px) {
+  .site-list__link--current-index {
     border-bottom: 2px #ffffff solid;
   }
 }
@@ -323,6 +351,7 @@
   margin: 0;
 }
 .main-container__functional-food {
+  margin: 0 auto;
   margin-bottom: 20px;
 }
 .main-container__programs-food {
@@ -356,6 +385,16 @@
 }
 .main-container__catalog-edditional {
   margin-bottom: 35px;
+}
+@media (min-width: 768px) {
+  .main-container__catalog-edditional {
+    margin-bottom: 76px;
+  }
+}
+@media (min-width: 1440px) {
+  .main-container__catalog-edditional {
+    margin-bottom: 86px;
+  }
 }
 .functional-food {
   background-image: url("../img/index-cat-background.jpg");
@@ -1071,6 +1110,7 @@
   .example {
     padding-left: 0;
     padding-right: 0;
+    background: linear-gradient(to bottom, #ffffff 22%, #EAEAEA 22%, #EAEAEA 44%, #EAEAEA 44%);
   }
 }
 .example__wrapper {
@@ -1094,7 +1134,6 @@
     grid-template-columns: 436px 560px;
     gap: 0 224px;
     grid-template-areas: "description range" "parametrs range";
-    background: linear-gradient(to bottom, #ffffff 22%, #EAEAEA 22%, #EAEAEA 44%, #EAEAEA 44%);
   }
 }
 .example__wrapper-description {
@@ -1549,15 +1588,80 @@
   opacity: 0.3;
 }
 /* catalog.html */
+.line {
+  position: relative;
+  z-index: 0;
+}
+.line::before {
+  content: "";
+  height: 2px;
+  background-color: #68B738;
+  width: 50%;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  z-index: -1;
+}
+@media (min-width: 768px) {
+  .line::before {
+    left: 0;
+    width: 100%;
+    top: 20%;
+  }
+}
+.line__catalog-edditional {
+  max-width: 280px;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .line__catalog-edditional {
+    margin: 0 auto;
+    max-width: 708px;
+  }
+}
+@media (min-width: 1440px) {
+  .line__catalog-edditional {
+    max-width: 1220px;
+    margin: 0 auto;
+  }
+}
+.line__catalog-edditional-title {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 24px;
+  color: #111111;
+  padding-bottom: 36px;
+  background-color: #ffffff;
+  display: inline-block;
+  margin: 0;
+  padding-right: 22px;
+}
+@media (min-width: 768px) {
+  .line__catalog-edditional-title {
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 0;
+    border-bottom: none;
+    margin-bottom: 80px;
+    padding-right: 37px;
+    padding-left: 37px;
+  }
+}
+@media (min-width: 1440px) {
+  .line__catalog-edditional-title {
+    font-size: 36px;
+    line-height: 36px;
+    padding-right: 35px;
+    padding-left: 40px;
+  }
+}
 .catalog {
   background-color: #ffffff;
-  padding: 20px;
-  padding-right: 20px;
   padding-top: 27px;
 }
 @media (min-width: 768px) {
   .catalog {
-    padding: 30px;
     padding-top: 27px;
     padding-bottom: 0;
     margin-bottom: 68px;
@@ -1565,24 +1669,24 @@
 }
 @media (min-width: 1440px) {
   .catalog {
-    padding: 110px;
     padding-top: 27px;
     padding-bottom: 0;
     margin-bottom: 75px;
   }
 }
 .catalog__wrapper {
-  width: 282px;
-  margin: 0 auto;
+  /*width: 282px;
+  margin: 0 auto;*/
 }
 @media (min-width: 768px) {
   .catalog__wrapper {
-    min-width: 708px;
+    width: 708px;
+    margin: 0 auto;
   }
 }
 @media (min-width: 1440px) {
   .catalog__wrapper {
-    min-width: 1220px;
+    width: 1220px;
   }
 }
 .catalog__title {
@@ -1591,9 +1695,9 @@
   font-size: 36px;
   line-height: 36px;
   padding-bottom: 41px;
-  margin: 0;
-  border-bottom: 1px solid #EBEBEB;
+  margin: 0 auto;
   margin-bottom: 8px;
+  width: 280px;
 }
 @media (min-width: 768px) {
   .catalog__title {
@@ -1601,7 +1705,8 @@
     line-height: 60px;
     padding-bottom: 0;
     border-bottom: none;
-    margin-bottom: 82px;
+    width: 431px;
+    margin: 0;
   }
 }
 @media (min-width: 1440px) {
@@ -1611,6 +1716,7 @@
     padding-bottom: 0;
     border-bottom: none;
     margin-bottom: 84px;
+    width: 431px;
   }
 }
 .catalog__product-list {
@@ -1685,39 +1791,42 @@
 }
 .product-list {
   list-style: none;
-  margin: 0 auto;
+  border-top: 1px solid #EBEBEB;
   padding: 0;
-  display: grid;
-  grid-template-columns: 282px;
 }
 @media (min-width: 768px) {
   .product-list {
+    display: grid;
     grid-template-columns: 324px 324px;
     gap: 60px;
+    margin: 0 auto;
+    border-top: none;
   }
 }
 @media (min-width: 1440px) {
   .product-list {
     grid-template-columns: repeat(4, 245px);
     gap: 63px 80px;
+    border-top: none;
   }
 }
 .product-list__item {
   padding-bottom: 25px;
+  border-bottom: 1px solid #EBEBEB;
 }
 @media (min-width: 768px) {
   .product-list__item {
     padding-bottom: 0;
+    border-bottom: none;
   }
 }
 @media (min-width: 1440px) {
   .product-list__item {
     padding-bottom: 0;
+    border-bottom: none;
   }
 }
 .product {
-  margin: 0;
-  width: 282px;
   padding-top: 11px;
 }
 @media (min-width: 768px) {
@@ -1735,6 +1844,7 @@
   }
 }
 .product__wrapper {
+  margin: 0 auto;
   width: 280px;
   display: grid;
   grid-template-columns: 140px 141px;
@@ -1973,8 +2083,6 @@
   }
 }
 .catalog-edditional {
-  padding-left: 18px;
-  padding-right: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -1985,50 +2093,32 @@
 }
 @media (min-width: 1440px) {
   .catalog-edditional {
-    padding: 110px;
     flex-direction: row;
     justify-content: space-between;
+    width: 1220px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
   }
 }
 .catalog-edditional__wrapper {
-  width: 282px;
-  margin: 0 auto;
   margin-bottom: 35px;
 }
 @media (min-width: 768px) {
   .catalog-edditional__wrapper {
-    min-width: 708px;
+    margin: 0 auto;
+    width: 708px;
   }
 }
 @media (min-width: 1440px) {
   .catalog-edditional__wrapper {
-    min-width: 896px;
+    width: 896px;
     margin: 0;
   }
 }
-.catalog-edditional__title {
-  font-family: "Oswald", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 24px;
-  color: #111111;
-  margin: 0;
-  padding-bottom: 36px;
-  border-bottom: 1px solid #CDCDCD;
-}
 @media (min-width: 768px) {
-  .catalog-edditional__title {
-    font-size: 36px;
-    line-height: 36px;
-    padding-bottom: 0;
-    border-bottom: none;
-    margin-bottom: 80px;
-  }
-}
-@media (min-width: 1440px) {
-  .catalog-edditional__title {
-    font-size: 36px;
-    line-height: 36px;
+  .catalog-edditional__list {
+    margin-bottom: 69px;
   }
 }
 .catalog-edditional__present {
@@ -2036,44 +2126,50 @@
 }
 .edditional-list {
   list-style: none;
-  margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
   .edditional-list {
     border: 1px solid #CDCDCD;
+    margin-top: 0;
   }
 }
 @media (min-width: 1440px) {
   .edditional-list {
     border: none;
     border-top: 1px solid #CDCDCD;
+    margin: 0;
   }
 }
-.edditional-list__item {
-  border-bottom: 1px solid #CDCDCD;
-}
-.product-editional {
+.product-editional__wrapper {
   padding-top: 13px;
   padding-bottom: 19px;
   display: grid;
   grid-template-areas: "product" "detail" "button";
+  width: 282px;
+  margin: 0 auto;
+  border-bottom: 1px solid #CDCDCD;
+}
+.product-editional__wrapper:first-child {
+  border-top: 1px solid #CDCDCD;
 }
 @media (min-width: 768px) {
-  .product-editional {
+  .product-editional__wrapper {
     grid-template-areas: "product detail" "button button";
     padding: 26px 38px 28px 38px;
     grid-template-columns: 266px 300px;
     column-gap: 60px;
     row-gap: 25px;
+    width: 708px;
   }
 }
 @media (min-width: 1440px) {
-  .product-editional {
+  .product-editional__wrapper {
     padding: 15px 0 17px 0;
     grid-template-columns: 286px 288px 244px;
     column-gap: 38px;
     grid-template-areas: "product detail button";
+    width: 896px;
   }
 }
 .product-editional__name {
@@ -2224,6 +2320,7 @@
     min-height: 289px;
     padding: 0 43px 42px 41px;
     background-repeat: no-repeat;
+    margin: 0;
   }
   .present::before {
     position: absolute;
@@ -2683,7 +2780,6 @@
 }
 .form-contacts__title {
   font-family: "Oswald", "Arial", sans-serif;
-  background-color: #ffffff;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
@@ -2692,16 +2788,18 @@
   margin: 0;
   margin-bottom: 35px;
   position: relative;
+  background-color: #ffffff;
   z-index: 0;
+  display: inline-block;
 }
 .form-contacts__title::before {
   content: "";
   position: absolute;
-  z-index: -2;
+  z-index: -1;
   top: 15px;
   left: 0;
   background-color: #68B738;
-  width: 280px;
+  width: 1000%;
   height: 2px;
 }
 @media (min-width: 768px) {
@@ -2710,12 +2808,18 @@
     line-height: 36px;
     margin-bottom: 76px;
   }
+  .form-contacts__title::before {
+    left: -200%;
+  }
 }
 @media (min-width: 1440px) {
   .form-contacts__title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+  }
+  .form-contacts__title::before {
+    left: -200%;
   }
 }
 .form-contacts__list {
@@ -2861,6 +2965,18 @@
   color: #000000;
   padding: 0;
   margin-bottom: 38px;
+  position: relative;
+  z-index: 0;
+}
+.form-comment__title::before {
+  content: "";
+  position: absolute;
+  z-index: -2;
+  top: 15px;
+  left: 0;
+  background-color: #68B738;
+  width: 1000%;
+  height: 2px;
 }
 @media (min-width: 768px) {
   .form-comment__title {
@@ -2868,12 +2984,18 @@
     line-height: 36px;
     margin-bottom: 76px;
   }
+  .form-comment__title::before {
+    left: -200%;
+  }
 }
 @media (min-width: 1440px) {
   .form-comment__title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+  }
+  .form-comment__title::before {
+    left: -200%;
   }
 }
 .form-comment__text-area {
@@ -2917,6 +3039,18 @@
   color: #000000;
   padding: 0;
   margin-bottom: 34px;
+  position: relative;
+  z-index: 0;
+}
+.form-checkbox__title::before {
+  content: "";
+  position: absolute;
+  z-index: -2;
+  top: 15px;
+  left: 0;
+  background-color: #68B738;
+  width: 1000%;
+  height: 2px;
 }
 @media (min-width: 768px) {
   .form-checkbox__title {
@@ -2924,12 +3058,18 @@
     line-height: 36px;
     margin-bottom: 57px;
   }
+  .form-checkbox__title::before {
+    left: -200%;
+  }
 }
 @media (min-width: 1440px) {
   .form-checkbox__title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 57px;
+  }
+  .form-checkbox__title::before {
+    left: -200%;
   }
 }
 .form-checkbox__list {
