--- a/source/less/blocks/form-radio.less
+++ b/source/less/blocks/form-radio.less
@@ -1,12 +1,15 @@
 .form-radio {
   padding-bottom: 19px;
-  border: 1px solid @color-light-grey-4;
+  position: relative;
+  border: none;
 
   @media (min-width: @tablet-width) {
+    border: 1px solid @color-light-grey-4;
     padding: 25px 28px 25px 28px;
   }
 
   @media (min-width: @desktop-width) {
+    border: 1px solid @color-light-grey-4;
     width: 570px;
     padding: 25px 28px 25px 28px;
   }
