--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -11,13 +11,16 @@
   padding: 0;
   margin-bottom: 38px;
   position: relative;
-  z-index: 0;
+  background-color: @color-white;
+
+  width: 143px;
+  padding-right: 22px;
 
   &::before {
     content: "";
     position: absolute;
     z-index: -2;
-    top: 15px;
+    top: 50%;
     left: 0;
     background-color: @color-basic-green;
     width: 1000%;
@@ -28,6 +31,9 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+    width: 259px;
+    padding-right: 38px;
+    padding-left: 39px;
 
     &::before {
       left: -200%;
@@ -38,6 +44,9 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+    width: 262px;
+    padding-right: 40px;
+    padding-left: 40px;
 
     &::before {
       left: -200%;
