--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -13,14 +13,15 @@
   margin-bottom: 35px;
   position: relative;
   background-color: @color-white;
-  z-index: 0;
   display: inline-block;
+  width: 201px;
+  padding-right: 14px;
 
   &::before {
     content: "";
     position: absolute;
-    z-index: -1;
-    top: 15px;
+    z-index: -2;
+    top: 50%;
     left: 0;
     background-color: @color-basic-green;
     width: 1000%;
@@ -31,6 +32,9 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+    width: 595px;
+    padding-left: 39px;
+    padding-right: 42px;
 
     &::before {
       left: -200%;
@@ -41,6 +45,9 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+    min-width: 595px;
+    padding-left: 40px;
+    padding-right: 40px;
 
     &::before {
       left: -200%;
@@ -60,6 +67,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 1220px;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -75,12 +83,16 @@
   }
 
   @media (min-width: @tablet-width) {
+    width: 634px;
+
     &:not(:last-child) {
       margin-bottom: 20px;
     }
   }
 
   @media (min-width: @desktop-width) {
+    width: 570px;
+
     &:not(:last-child) {
       margin-bottom: 0;
     }
