--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -1,5 +1,5 @@
 .functional-food {
-  background-image: url("../img/index-cat-background.jpg");
+  background-image: url("../img/index-cat-background-mobile.jpg");
   background-repeat: no-repeat;
   color: @color-white;
   font-family: @font-oswald;
@@ -21,6 +21,11 @@
     z-index: -1;
   }
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/index-cat-background-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+
   @media (min-width: @tablet-width) {
     min-width: 534px;
     min-height: 810px;
@@ -35,21 +40,16 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../img/index-cat-background.jpg");
-    background-repeat: no-repeat;
+    background-image: none;
     min-width: 920px;
     min-height: 499px;
     padding: 0;
-  }
-
-  @media (min-width: @desktop-width) {
-    background-image: none;
 
     &::after {
-      content: url("../img/index-cat-background.jpg");
+      content: url("../img/index-cat-background-desktop.jpg");
       position: absolute;
-      left: 660px;
-      top: -179px;
+      left: 487px;
+      top: -206px;
       min-width: 920px;
       min-height: 499px;
       z-index: -1;
@@ -64,6 +64,12 @@
       top: -206px;
       background-color: fade(@color-basic-green, 85%);
       z-index: 3;
+    }
+
+    @media (min-resolution: 2dppx) {
+      &::after {
+        content: url("../img/index-cat-background-desktop@2x.jpg");
+      }
     }
   }
 }
@@ -151,15 +157,21 @@
   position: absolute;
   left: 23px;
   top: 165px;
-  z-index: 9;
+  z-index: 3;
 
   @media (min-width: @tablet-width) {
-    left: 183px;
-    top: 330px;
+    left: -50px;
+    top: 200px;
+    width: 709px;
+    height: 609px;
+    z-index: -1;
   }
 
   @media (min-width: @desktop-width) {
-    left: 404px;
+    left: 330px;
     top: -46px;
+    width: 552px;
+    height: 499px;
+    z-index: 3;
   }
 }
