--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -20,22 +20,23 @@
 }
 
 .main-footer__wrapper-link {
-  width: 100%;
+  width: 280px;
+  padding: 20px;
   min-height: 34px;
   margin: 0 auto;
-  padding: 0;
   display: flex;
   flex-direction: column;
 
   @media (min-width: @tablet-width) {
-    width: 100%;
+    width: 768px;
     flex-direction: row;
     justify-content: space-between;
     padding: 58px 30px 55px 30px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 100%;
+    width: 1440px;
+    padding: 110px;
     flex-direction: row;
     justify-content: space-between;
   }
