Адаптивная графика (исправление замечаний)

--- a/source/less/blocks/form-checkbox.less
+++ b/source/less/blocks/form-checkbox.less
@@ -12,8 +12,8 @@
   margin-bottom: 34px;
   position: relative;
   background-color: @color-white;
+  display: inline-block;
 
-  width: 164px;
   padding-right: 23px;
 
   &::before {
@@ -31,7 +31,6 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 57px;
-    width: 292px;
     padding-right: 41px;
     padding-left: 40px;
 
@@ -44,7 +43,6 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 57px;
-    width: 292px;
     padding-right: 40px;
     padding-left: 40px;
 
