--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -12,8 +12,8 @@
   margin-bottom: 38px;
   position: relative;
   background-color: @color-white;
+  display: inline-block;
 
-  width: 143px;
   padding-right: 22px;
 
   &::before {
@@ -31,7 +31,6 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
-    width: 259px;
     padding-right: 38px;
     padding-left: 39px;
 
@@ -44,7 +43,6 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
-    width: 262px;
     padding-right: 40px;
     padding-left: 40px;
 
