--- a/source/less/blocks/company.less
+++ b/source/less/blocks/company.less
@@ -1,11 +1,10 @@
 .company {
-  width: 320px;
-  margin: 0 auto;
-  padding: 96px;
   padding-top: 39px;
   padding-bottom: 32px;
+  border-bottom: 1px solid @color-light-grey-3;
 
   @media (min-width: @tablet-width) {
+    border-bottom: none;
     padding: 0;
     margin: 0;
     width: 128px;
@@ -18,4 +17,5 @@
 
 .company__image {
   margin: 0 auto;
+  display: block;
 }
