--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -25,9 +25,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 26px 20px;
+  width: 320px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     padding: 56px 70px;
+    width: 768px;
   }
 
   @media (min-width: @desktop-width) {
