--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -1,4 +1,25 @@
 .functional-food {
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 302px;
+    left: 0;
+    top: 66px;
+    background-color: fade(@color-basic-green, 85%);
+    z-index: 6;
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before {
+      width: 0;
+      height: 0;
+    }
+  }
+}
+
+.functional-food__wrapper {
+  margin: 0 auto;
   background-image: url("../img/index-cat-background-mobile.jpg");
   background-repeat: no-repeat;
   color: @color-white;
@@ -8,18 +29,7 @@
   padding-top: 27px;
   width: 320px;
   position: relative;
-  z-index: 2;
-
-  &::before {
-    position: absolute;
-    content: "";
-    width: 320px;
-    height: 302px;
-    left: 0;
-    top: 0;
-    background-color: fade(@color-basic-green, 85%);
-    z-index: -1;
-  }
+  z-index: 5;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/index-cat-background-mobile@2x.jpg");
@@ -32,11 +42,6 @@
 
     background-image: none;
     padding: 0;
-
-    &::before {
-      width: 0;
-      height: 0;
-    }
   }
 
   @media (min-width: @desktop-width) {
@@ -74,10 +79,6 @@
   }
 }
 
-.functional-food__wrapper {
-  margin: 0 auto;
-}
-
 .functional-food__title {
   font-weight: 400;
   font-size: 36px;
@@ -85,6 +86,7 @@
   margin: 0;
   margin-bottom: 25px;
   text-align: center;
+  z-index: 6;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -111,6 +113,7 @@
   margin: 0;
   margin-bottom: 302px;
   text-align: center;
+  z-index: 5;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
