--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,10 +1,5 @@
 .html-academy {
-  width: 100%;
-  min-height: 34px;
-  margin: 0 auto;
-  padding: 22px;
-  padding-left: 19px;
-  padding-right: 20px;
+  padding-top: 22px;
 
   @media (min-width: @tablet-width) {
     width: 163px;
