--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -20,7 +20,7 @@
 }
 
 .main-footer__wrapper-link {
-  width: 280px;
+  width: 320px;
   padding: 20px;
   min-height: 34px;
   margin: 0 auto;
@@ -31,6 +31,7 @@
     width: 768px;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 58px 30px 55px 30px;
   }
 
