--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -49,6 +49,7 @@
   display: flex;
   justify-content: space-between;
   width: 191px;
+  align-items: center;
 
   @media (min-width: @tablet-width) {
     width: auto;
@@ -94,10 +95,6 @@
     width: 100%;
     height: 100%;
   }
-}
-
-.main-header__name-logo {
-  padding-top: 10px;
 }
 
 .main-header__company-image {
