--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,8 @@
 .social {
-  width: 320px;
-  margin: 0 auto;
-  padding: 94px;
-  padding-top: 20px;
-  padding-bottom: 21px;
+  border-bottom: 1px solid @color-light-grey-3;
 
   @media (min-width: @tablet-width) {
+    border-bottom: none;
     width: 132px;
     padding: 0;
     margin: 0;
@@ -19,8 +16,10 @@
 .social__list {
   list-style: none;
   display: flex;
-  margin: 0;
+  justify-content: center;
+  flex-wrap: wrap;
   padding: 0;
+  align-items: center;
 }
 
 .social__item {
